2003-04-04  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (libintl_set_relocation_prefix): Convert extern
	declaration to K&R syntax.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.vms: New file.
	* Makefile.in (DISTFILES.gettext): Add Makefile.vms.

2003-03-30  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (INCLUDES): Mention the current directory first.

2003-03-17  Bruno Haible  <bruno@clisp.org>

	Native Woe32/MSVC support.
	* libgnuintl.h.in: Renamed from libgnuintl.h.
	* Makefile.msvc: New file.
	* README.woe32: New file.
	* Makefile.in (HEADERS): Remove libgnuintl.h, add libgnuintl.h.in.
	(DISTFILES.gettext): Add libgnuintl.h.msvc-shared, README.woe32,
	Makefile.msvc.
	(DISTFILES.obsolete): Add libgnuintl.h.
	(libgnuintl.h): New rule.
	(libintl.h, $(OBJECTS)): Expect libgnuintl.h in builddir, not in
	srcdir.
	(mostlyclean): Also remove libgnuintl.h.
	* dcigettext.c (alloca): Add support for MSVC.
	* loadmsgcat.c (alloca): Likewise.
	* localealias.c (alloca): Likewise.
	* relocatable.h (RELOCATABLE_DLL_EXPORTED): New macro.

	* Makefile.in (loadmsgcat.$lo): Depend on hash-string.h.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (localcharset.$lo): Depend on localcharset.h.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	Support for relocatable installation.
	* relocatable.h: New file.
	* relocatable.c: New file.
	* libgnuintl.h (libintl_set_relocation_prefix): New declaration.
	* localealias.c: Include relocatable.h.
	(read_alias_file): Relocate LOCALE_ALIAS_PATH element.
	* localcharset.c: Include relocatable.h.
	(get_charset_aliases): Relocate LIBDIR value.
	* Makefile.in (DEFS): Define also ENABLE_RELOCATABLE, IN_LIBRARY,
	INSTALLDIR, NO_XMALLOC, set_relocation_prefix, relocate.
	(HEADERS): Add relocatable.h.
	(SOURCES): Add relocatable.c.
	(OBJECTS): Add relocatable.$lo.
	(relocatable.$lo): New rule.

2003-02-28  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (mkinstalldirs): Simplify. Prepending "$(top_builddir)/"