@@ -21,8 +21,6 @@
 # include <config.h>
 #endif
 
-#define _INTL_REDIRECT_MACROS
-#include "libgnuintl.h"
 #include "gettextP.h"
 
 /* @@ end of prolog @@ */
@@ -48,6 +46,17 @@
 #undef bind_textdomain_codeset
 
 
+/* When building a DLL, we must export some functions.  Note that because
+   the functions are only defined for binary backward compatibility, we
+   don't need to use __declspec(dllimport) in any case.  */
+#if defined _MSC_VER && BUILDING_DLL
+# define DLL_EXPORTED __declspec(dllexport)
+#else
+# define DLL_EXPORTED
+#endif
+
+
+DLL_EXPORTED
 char *
 gettext (msgid)
      const char *msgid;
@@ -56,6 +65,7 @@ gettext (msgid)
 }
 
 
+DLL_EXPORTED
 char *
 dgettext (domainname, msgid)
      const char *domainname;
@@ -65,6 +75,7 @@ dgettext (domainname, msgid)
 }
 
 
+DLL_EXPORTED
 char *
 dcgettext (domainname, msgid, category)
      const char *domainname;
@@ -75,6 +86,7 @@ dcgettext (domainname, msgid, category)
 }
 
 
+DLL_EXPORTED
 char *
 ngettext (msgid1, msgid2, n)
      const char *msgid1;
@@ -85,6 +97,7 @@ ngettext (msgid1, msgid2, n)
 }
 
 
+DLL_EXPORTED
 char *
 dngettext (domainname, msgid1, msgid2, n)
      const char *domainname;
@@ -96,6 +109,7 @@ dngettext (domainname, msgid1, msgid2, n)
 }
 
 
+DLL_EXPORTED
 char *
 dcngettext (domainname, msgid1, msgid2, n, category)
      const char *domainname;
@@ -108,6 +122,7 @@ dcngettext (domainname, msgid1, msgid2, n, category)
 }
 
 
+DLL_EXPORTED
 char *
 textdomain (domainname)
      const char *domainname;
@@ -116,6 +131,7 @@ textdomain (domainname)
 }
 
 
+DLL_EXPORTED
 char *
 bindtextdomain (domainname, dirname)
      const char *domainname;
@@ -125,6 +141,7 @@ bindtextdomain (domainname, dirname)
 }
 
 
+DLL_EXPORTED
 char *
 bind_textdomain_codeset (domainname, codeset)
      const char *domainname;
